# Linera-Arcade

./: .gitignore  Cargo.toml  README.md
backend/: .env.example  README.md  docker-compose.yml  package-lock.json  package.json  render.yaml
backend/src/: index.ts
backend/src/db/: index.ts  memory.ts  migrate.ts
backend/src/repositories/: players.ts  scores.ts
backend/src/routes/: api.ts
contracts/arcade_hub/: Cargo.toml
contracts/arcade_hub/src/: contract.rs  lib.rs  service.rs  state.rs
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.ts
frontend/public/js/: dynamic-iframe-shim.js
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/components/: Footer.tsx  GameCard.tsx  Layout.tsx  LeaderboardTable.tsx  Navbar.tsx  PlayerStats.tsx  index.ts
frontend/src/games/: AimTrainer.tsx  ColorRush.tsx  MathBlitz.tsx  MemoryMatrix.tsx  ReactionStrike.tsx  SnakeSprint.tsx  SpeedClicker.tsx  TypingBlitz.tsx  index.ts
frontend/src/hooks/: index.ts  useArcade.ts  useLeaderboard.ts  useLineraConnection.ts
frontend/src/lib/api/: backendApi.ts  index.ts
frontend/src/lib/arcade/: arcadeApi.ts  index.ts  queries.ts  types.ts
frontend/src/pages/: GamePlayPage.tsx  GamesPage.tsx  HomePage.tsx  LeaderboardPage.tsx  ProfilePage.tsx  index.ts
frontend/src/types/: index.ts
scripts/: build.sh  check-install-status.sh  deploy-arcade-hub.sh  deploy.sh  install-all.sh  install-linera-robust.sh  run-service.sh  setup-conway-wallet.sh  start-backend.sh
(+4 files in other folders)
