[package]
name = "arcade-hub"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
linera-sdk = "0.15.8"
async-graphql = { version = "7", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
thiserror = "1"

[dev-dependencies]
linera-sdk = { version = "0.15.8", features = ["test"] }

[[bin]]
name = "arcade_hub_contract"
path = "src/contract.rs"

[[bin]]
name = "arcade_hub_service"
path = "src/service.rs"
